Added toggle function to hamburger menu

--- a/restaurang/src/components/layout/css/layout.css
+++ b/restaurang/src/components/layout/css/layout.css
@@ -73,7 +73,7 @@
       left: 0;
       width: 100%;
       height: calc(100vh - 60px);
-      background-color: black;
+      background-color: rgb(0, 0, 0);
       border-top: 1px solid pink;
       display: none;
     }
