--- a/restaurang/src/components/booking/css/booking.css
+++ b/restaurang/src/components/booking/css/booking.css
@@ -1,1 +1,27 @@
-/* No CSS *//*# sourceMappingURL=booking.css.map */
+body {
+  background-color: black;
+}
+
+p {
+  color: #FFB2B2;
+  font-size: 0.8rem;
+}
+
+.info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+.times {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+/*# sourceMappingURL=booking.css.map */
