--- a/restaurang/src/components/booking/css/booking.css
+++ b/restaurang/src/components/booking/css/booking.css
@@ -24,4 +24,11 @@ p {
   display: flex;
   gap: 10px;
 }
+
+.dropDown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
 /*# sourceMappingURL=booking.css.map */
