--- a/restaurang/src/components/main/css/menu.scss
+++ b/restaurang/src/components/main/css/menu.scss
@@ -7,6 +7,7 @@
         position: fixed;
         h3{
             cursor: pointer;
+            color: #FFB2B2;
         }
         .active{
             text-decoration: underline;
