--- a/restaurang/src/components/main/css/menu.scss
+++ b/restaurang/src/components/main/css/menu.scss
@@ -40,6 +40,7 @@
                 position: relative;
                 top: -200px;
                 left: 260px;
+                z-index: -1;
             }
         }
     }
@@ -54,6 +55,7 @@
                 position: relative;
                 top: -190px;
                 left: 260px;
+                z-index: -1;
             }
             &:last-child{
                 height: 300px;
@@ -70,6 +72,7 @@
             position: relative;
             top: -170px;
             left: 260px;
+            z-index: -1;
         }
         p{
             width: 60%;
