--- a/restaurang/src/components/main/css/main.scss
+++ b/restaurang/src/components/main/css/main.scss
@@ -45,8 +45,10 @@
                 color: black;
                 padding: 10px 15px;
                 text-transform: uppercase;
+                cursor: pointer;
             
                 &:hover {
+                transition-duration: 0.1s;
                   background-color: #fbc9c9;
                 }
             
@@ -60,7 +62,25 @@
             }
         }
     }
+    .vertically{
+        height: 300px;
+        width: 50%;
+        .inner{
+            position: absolute;
+            animation: bounce 5s linear infinite alternate;
+        }
+        @keyframes bounce {
+            0%{ 
+
+                transform: scale(110%);
+            }
+            100%{
+
+                transform: scale(100%);
+            }
+        }
+    }
     img{
-        width: 80%;
+        width: 60%;
     }
 }
