--- a/restaurang/src/components/admin/css/admin.scss
+++ b/restaurang/src/components/admin/css/admin.scss
@@ -1,5 +1,5 @@
 .newbooking{
-    width:100vw;
+    width:98vw;
     display: flex;
     justify-content: center;
 }
@@ -9,7 +9,7 @@
     gap: 40px;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100vw;
+    width: 98vw;
     margin-bottom: 30px;
     margin: auto;
     div{
@@ -18,6 +18,32 @@
 
             position: relative;
             margin-left: 0;
+            width: 100%;
+            margin-bottom: 30px;
+            span{
+                margin:0;
+                font-size: 0.8rem;
+                color: #FFB2B2;
+            }
         }
     }
 }
+button {
+    margin: 3px;
+    background-color: #ffdada;
+    border: 0;
+    border-radius: 3px;
+    color: black;
+    padding: 5px 0;
+
+    &:hover {
+      background-color: #fa9999;
+    }
+
+    &:active {
+      background-color: #fbc9c9;
+    }
+    &:disabled {
+      opacity: 0.5;
+    }
+  }
