--- a/restaurang/src/components/admin/css/admin.css
+++ b/restaurang/src/components/admin/css/admin.css
@@ -8,6 +8,18 @@
           justify-content: center;
 }
 
+.newbooking button {
+  font-size: 1.2rem;
+}
+
+h1, h2 {
+  color: #fa9999;
+}
+
+p {
+  color: white;
+}
+
 .CustomerData {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -46,7 +58,8 @@ button {
   border: 0;
   border-radius: 3px;
   color: black;
-  padding: 5px 0;
+  padding: 5px 5px;
+  text-transform: uppercase;
 }
 
 button:hover {
