--- a/restaurang/src/components/admin/css/admin.scss
+++ b/restaurang/src/components/admin/css/admin.scss
@@ -2,6 +2,15 @@
     width:98vw;
     display: flex;
     justify-content: center;
+    button{
+        font-size: 1.2rem;
+    }
+}
+h1, h2{
+    color: #fa9999;
+}
+p{
+    color:white;
 }
 
 .CustomerData{
@@ -34,7 +43,8 @@ button {
     border: 0;
     border-radius: 3px;
     color: black;
-    padding: 5px 0;
+    padding: 5px 5px;
+    text-transform: uppercase;
 
     &:hover {
       background-color: #fa9999;
