--- a/restaurang/src/components/admin/css/admin.scss
+++ b/restaurang/src/components/admin/css/admin.scss
@@ -24,16 +24,22 @@ p{
     div{
         width: 30%;
         form{
-
             position: relative;
             margin-left: 0;
             width: 100%;
+            max-width: 400px;
+            border-radius: 2px;
+            padding: 20px;
             margin-bottom: 30px;
             span{
                 margin:0;
                 font-size: 0.8rem;
                 color: #FFB2B2;
             }
+            p{
+                color:#fbc9c9;
+            }
+
         }
     }
 }
