--- a/restaurang/src/components/booking/css/booking.scss
+++ b/restaurang/src/components/booking/css/booking.scss
@@ -1,21 +1,92 @@
-body{
-    background-color: black;
-  }
+body {
+  background-color: black;
+}
+p {
+  color: #ffb2b2;
+  font-size: 0.8rem;
+}
+.info {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+.times {
+  display: flex;
+  gap: 10px;
+}
+.dropDown {
+  display: flex;
+  gap: 10px;
+}
+
+.formdiv{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   p{
-    color: #FFB2B2;
-    font-size: 0.8rem;
+    font-size: 1.3rem;
   }
-  .info{
-    display: flex;
-    justify-content: space-between;
-    margin-left: 8px;
-    margin-right: 8px;
+}
+form {
+  max-width: 400px;
+  background: #000;
+  border-radius: 2px;
+  padding: 20px;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    li {
+      display: block;
+      padding: 9px;
+      border: 1px solid #ffdada;
+      margin-bottom: 30px;
+      border-radius: 3px;
+    }
+    li > label {
+      display: block;
+      float: left;
+      margin-top: -19px;
+      background: #000;
+      height: 14px;
+      padding: 2px 5px 2px 5px;
+      color: #ffb2b2;
+      font-size: 14px;
+      overflow: hidden;
+    }
+    input {
+      box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      width: 100%;
+      display: block;
+      outline: none;
+      border: none;
+      height: 25px;
+      line-height: 25px;
+      font-size: 16px;
+      padding: 0;
+      background-color: #000;
+      color:white;
+    }
+    li > span {
+      background: #383838;
+      display: block;
+      padding: 3px;
+      margin: 0 -9px -9px -9px;
+      text-align: center;
+      color: #ffb2b2;
+      font-size: 11px;
+    }
   }
-  .times{
-    display: flex;
-    gap: 10px;
-  }
-  .dropDown{
-    display: flex;
-    gap: 10px;
-  }
+}
+button{
+  cursor: pointer;
+}
+
+.sumbitcomplete{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
